--- a/_projects/2021-01-30-Climbot.md
+++ b/_projects/2021-01-30-Climbot.md
@@ -1,6 +1,6 @@
 ---
 title: 'Climbot'
-subtitle: 'Towards tangible on-the-wall interaction'
+subtitle: 'Walls are boring. Why not enhance them with a little bit of tangible interaction?'
 date: 2021-01-30 00:00:00
 description: This page is a demo that shows everything you can do inside portfolio and blog posts.
 featured_image: '/images/WallIsometric.png'
@@ -17,7 +17,8 @@ featured_image: '/images/WallIsometric.png'
 
 **Publications:** Towards On-the-wall Tangible Interaction: Using Walls as Interactive, Dynamic, and Responsive User Interface to appear in CHI Late Breaking Work, 2021.
 
-Walls are boring. Why not enhance them with a little bit of tangible interaction? 
+This paper presents our vision of on-the-wall tangible interaction. We envision a future where tangible interaction can be extended from conventional horizontal surfaces to vertical surfaces; indoor vertical areas such as walls, windows, and ceilings can be used for dynamic and direct physical manipulation. We first discuss the unique properties that vertical surfaces may offer for tangible interaction and the interaction scenarios they imbue. We then propose two potential paths for realizing on-the-wall interaction and the technical challenges we face. We follow with one prototype called Climbot. We showcase how Climbot can be used as an on-the-wall tangible user interface for dynamic lighting and as a wall switch controller. We conclude with a discussion of future work.
+
 
 <div class="gallery" data-columns="2">
 	<img src="/images/Climbot/Applications.jpg">
