--- a/_fun/2019-12-12-fui.md
+++ b/_fun/2019-12-12-fui.md
@@ -6,7 +6,7 @@ description:
 featured_image: '/images/fui/Table3.png'
 ---
 
-<iframe width="100%" height="auto" src="https://www.youtube.com/embed/qBIVsOVlDVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/658464906?h=77453d8967&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="ProjectTerraform.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 Looking at futuristic user interfaces on film is always interesting as an HCI researcher. The impracticality of the interface combined with the colors and the glow seems hard to imagine. I decided to give it a shot as it looked like a great design challenge and an opportunity to learn After Effects.
 
