--- a/_fun/2019-12-12-fui.md
+++ b/_fun/2019-12-12-fui.md
@@ -11,7 +11,7 @@ featured_image: '/images/fui/Table3.png'
 
 Looking at futuristic user interfaces on film is always interesting as an HCI researcher. The impracticality of the interface combined with the colors and the glow seems hard to imagine. I decided to give it a shot as it looked like a great design challenge and an opportunity to learn After Effects.
 
-<div class="embed-container">
+<div class="embed-container mt">
   <iframe
       src="https://player.vimeo.com/video/658464906"
       width="500"
