Learning the Piano

--- a/_fun/2019-12-12-fui.md
+++ b/_fun/2019-12-12-fui.md
@@ -1,5 +1,5 @@
 ---
-title: 'Fantastical User Interfaces'
+title: 'FUI - Fantastical User Interfaces'
 subtitle: 'attempting to design a furturistic interface'
 date: 2020-05-12 00:00:00
 description:
