--- a/_publications/2021-01-30-Climbot.md
+++ b/_publications/2021-01-30-Climbot.md
@@ -1,6 +1,6 @@
 ---
 title: 'Towards On-the-wall Tangible Interaction: Using Walls as Interactive, Dynamic, and Responsive User Interface'
-subtitle: 'Walls are boring. Why not enhance them with a little bit of tangible interaction?'
+subtitle: 'Exploring the potential to add tangibility to walls'
 authors: 'Zeyu Yan, <strong>Anup Sathya</strong>, Pedro Carvalho, Yongqao Hu, Annan Li, Huaishu Peng'
 venue: 'In Proceedings of CHI EA 2021'
 date: 2021-05-08 00:00:00
