--- a/_publications/2022-09-07-Calico.md
+++ b/_publications/2022-09-07-Calico.md
@@ -8,14 +8,15 @@ description: This page is a demo that shows everything you can do inside portfol
 featured_image: '/images/calico/thumbnail.png'
 doi: 'https://doi.org/10.1145/3550323'
 ---
-![](/images/Climbot/MultipleZeyus.jpg)
 
-<section>
-    <div class="videoWrapper">
-	<iframe src="https://www.youtube.com/embed/R1Mcj5uil6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<div class="container">
+	<div class="embed-container">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/R1Mcj5uil6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 </div>
 
- <div class="mt-3">
+
+<div class="mt-3">
 	<p>We explore Calico, a miniature relocatable wearable system with fast and precise locomotion for on-body interaction, actuation and sensing. Calico consists of a two-wheel robot and an on-cloth track mechanism or "railway," on which the robot travels. The robot is self-contained, small in size, and has additional sensor expansion options. The track system allows the robot to move along the user’s body and reach any predetermined location. It also includes rotational switches to enable complex routing options when diverging tracks are presented. We report the design and implementation of Calico with a series of technical evaluations for system performance. We then present a few application scenarios, and user studies to understand the potential of Calico as a dance trainer and also explore the qualitative perception of our scenarios to inform future research in this space.</p>
 	<p>
 		<strong>Created by:</strong>
@@ -34,55 +35,57 @@ doi: 'https://doi.org/10.1145/3550323'
 
 <p>
 	<strong>Talk:</strong>
+</p>
 
-	</p><div class="videoWrapper">
-		<iframe src="https://www.youtube.com/embed/TPu8ORrs0Ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<div class="container mt">
+	<div class="embed-container">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/TPu8ORrs0Ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
-<p></p>
+</div>
 
 
 <p>
 	<strong>Figures:</strong>
 </p>
 
-<div class="row">
-<div class="col-12 col-lg-6">
-		<img src="/images/calico/1.png" alt="Calico" class="img-fluid">
-		<br><br><br>
-		<img src="/images/calico/2.png" alt="Calico" class="img-fluid">
-		<br><br><br>         
-		<img src="/images/calico/3.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/4.jpg" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/5.png" alt="Calico" class="img-fluid">
-		<br><br><br>
-		<img src="/images/calico/6.svg" alt="Calico" class="img-fluid">
-		<br><br><br>         
-		<img src="/images/calico/7.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/8.jpg" alt="Calico" class="img-fluid">
-	</div>
-	<div class="col-12 col-lg-6">   
-		<img src="/images/calico/9.png" alt="Calico" class="img-fluid">
-		<br><br><br>
-		<img src="/images/calico/10.png" alt="Calico" class="img-fluid">
-		<br><br><br>         
-		<img src="/images/calico/11.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/12.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/13.png" alt="Calico" class="img-fluid">
-		<br><br><br>
-		<img src="/images/calico/14.png" alt="Calico" class="img-fluid">
-		<br><br><br>         
-		<img src="/images/calico/15.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/16.png" alt="Calico" class="img-fluid">
-		<br><br><br> 
-		<img src="/images/calico/17.png" alt="Calico" class="img-fluid">
-	</div>
-</div> 
+<div class="container">
 
-
-  </section>
+	<div class="row">
+		<div class="col-12 col-lg-6">
+			<img src="/images/calico/1.png" alt="Calico" class="img-fluid">
+			<br><br><br>
+			<img src="/images/calico/2.png" alt="Calico" class="img-fluid">
+			<br><br><br>         
+			<img src="/images/calico/3.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/4.jpg" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/5.png" alt="Calico" class="img-fluid">
+			<br><br><br>
+			<img src="/images/calico/6.svg" alt="Calico" class="img-fluid">
+			<br><br><br>         
+			<img src="/images/calico/7.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/8.jpg" alt="Calico" class="img-fluid">
+		</div>
+		<div class="col-12 col-lg-6">   
+			<img src="/images/calico/9.png" alt="Calico" class="img-fluid">
+			<br><br><br>
+			<img src="/images/calico/10.png" alt="Calico" class="img-fluid">
+			<br><br><br>         
+			<img src="/images/calico/11.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/12.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/13.png" alt="Calico" class="img-fluid">
+			<br><br><br>
+			<img src="/images/calico/14.png" alt="Calico" class="img-fluid">
+			<br><br><br>         
+			<img src="/images/calico/15.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/16.png" alt="Calico" class="img-fluid">
+			<br><br><br> 
+			<img src="/images/calico/17.png" alt="Calico" class="img-fluid">
+		</div>
+	</div> 
+</div>
